# recruitment-task

./: .gitignore  README.md
Ex1/: CMakeLists.txt  README.md  main.cpp
Ex1/include/: Ex1.h
Ex1/src/: Ex1.cpp  Ex1.h  main.cpp
Ex1/test/: CMakeLists.txt  Ex1_test.cpp
Ex1/tst/: CMakeLists.txt  Ex1_test.cpp
Ex2/: CMakeLists.txt  README.md  main.cpp
Ex2/include/: Circle.h  Rectangle.h
Ex2/src/: Circle.cpp  Rectangle.cpp  main.cpp
Ex3/: CMakeLists.txt  README.md
Ex3/src/: cut_whitespaces.h  main.cpp
Ex3/tst/: Ex3_test.cpp
